--- a/safetynet-alerts/pom.xml
+++ b/safetynet-alerts/pom.xml
@@ -20,6 +20,7 @@
 			<spotbugs.maven.plugin.version>4.7.2.1</spotbugs.maven.plugin.version>
 			<maven.site.plugin.version>3.9.1</maven.site.plugin.version>
 			<mvn.project.info.reports.version>3.1.2</mvn.project.info.reports.version>
+			<packaging>jar</packaging>
 		</properties>
 	<dependencies>
 		<dependency>
@@ -39,7 +40,6 @@
 		<dependency>
 		    <groupId>org.projectlombok</groupId>
     		<artifactId>lombok</artifactId>
-    		<version>1.18.24</version>
     		<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -55,13 +55,11 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.8.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.8.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
