--- a/safetynet-alerts/pom.xml
+++ b/safetynet-alerts/pom.xml
@@ -78,6 +78,10 @@
 			<artifactId>maven-site-plugin</artifactId>
 			<version>3.12.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
