--- a/safetynet-alerts/src/main/resources/application.properties
+++ b/safetynet-alerts/src/main/resources/application.properties
@@ -2,3 +2,6 @@ server.port=8081
 
 logging.file.name=logs.txt
 logging.file.path=src/main/resources/logs.txt
+
+
+management.endpoints.web.exposure.include=*
