--- a/safetynet-alerts/src/main/resources/application.properties
+++ b/safetynet-alerts/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8081
 
 logging.file.name=logs.txt
 logging.file.path=src/main/resources/logs.txt
-
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 management.endpoints.web.exposure.include=*
