Ajout de tout ce qu'il faut

--- a/safetynet-alerts/pom.xml
+++ b/safetynet-alerts/pom.xml
@@ -89,6 +89,12 @@
 			<artifactId>mapstruct</artifactId>
 			<version>${org.mapstruct.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.safetynetalerts</groupId>
+			<artifactId>safetynet-alerts</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
