tests create and delete do not pass

--- a/safetynet-alerts/pom.xml
+++ b/safetynet-alerts/pom.xml
@@ -89,6 +89,11 @@
 			<artifactId>mapstruct</artifactId>
 			<version>${org.mapstruct.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20240303</version>
+		</dependency>
 	</dependencies>
 
 	<build>
